[workspace]
resolver = "2"
members = ["rudi", "rudi-core", "rudi-macro", "examples/*"]

[workspace.package]
version = "0.8.1"
edition = "2021"
authors = ["zihan <ZihanType@proton.me>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/ZihanType/rudi"
repository = "https://github.com/ZihanType/rudi"
include = ["src/**/*", "Cargo.toml"]
readme = "README.md"

[workspace.dependencies]
# self
rudi = { version = "0.8.1", path = "./rudi", default-features = false }
rudi-macro = { version = "0.8.1", path = "./rudi-macro", default-features = false }
rudi-core = { version = "0.1.0", path = "./rudi-core", default-features = false }

# dependencies
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }
syn = { version = "2", default-features = false }
from-attr = { version = "0.1", default-features = false }

# optional dependencies
inventory = { version = "0.3", default-features = false }
tracing = { version = "0.1", default-features = false }

# dev dependencies
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
poem = { version = "2", default-features = false }
poem-openapi = { version = "4", default-features = false }
axum = { version = "0.7", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "ansi",
    "env-filter",
] }
leptos = { version = "0.6", default-features = false }

[workspace.lints.rust]
unsafe_code = "forbid"
private_interfaces = "deny"
private_bounds = "deny"
unreachable_pub = "deny"
missing_docs = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"
