[package]
name = "rudi-core"
version = "0.1.0"
description = "Rudi core types"
keywords = ["dependency-injection", "ioc", "di", "dependency"]
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
include.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
