[package]
name = "rudi-macro"
description = "Macros for Rudi."
keywords = ["dependency-injection", "ioc", "di", "dependency"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
include.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = [
    "extra-traits",
    "parsing",
    "proc-macro",
    "printing",
    "full",
] }

[features]
default = ["auto-register"]
auto-register = []
