[package]
name = "rudi"
description = "Rudi - an out-of-the-box dependency injection framework for Rust."
keywords = ["dependency-injection", "ioc", "di", "dependency"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
include.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
rudi-core = { workspace = true }
rudi-macro = { workspace = true, optional = true }
inventory = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }

[features]
default = ["rudi-macro", "auto-register"]
auto-register = ["dep:inventory", "rudi-macro?/auto-register"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
