[package]
name = "axum-example"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
include.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rudi = { workspace = true, features = ["auto-register"] }
axum = { workspace = true, features = ["http1", "tokio"] }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
